--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -49,7 +49,7 @@
 										if (vdata == "Administrador") {
 											window.location = "html5/admin/index.html";
 										} else {
-											window.location = "html5/users/home.html";
+											window.location = "html5/users/index.html";
 										}
 									}
 	    					     },
