--- a/WebContent/html5/users/index.html
+++ b/WebContent/html5/users/index.html
@@ -35,10 +35,7 @@
                 <ul>
                     <li><a href="#" id="home-link" class="skel-layers-ignoreHref"><span class="icon fa-home">Home</span></a></li>
                     <li><a href="#" id="produtos-link" class="skel-layers-ignoreHref"><span class="icon fa-apple">Produtos</span></a></li>
-                    <li><a href="#" id="newproduto-link" class="skel-layers-ignoreHref"><span class="icon fa-apple">Cadastrar Produto</span></a></li>
                     <li><a href="#" id="pedidos-link" class="skel-layers-ignoreHref"><span class="icon fa-shopping-cart">Pedidos</span></a></li>
-                    <li><a href="#" id="usuarios-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Usuários</span></a></li>
-                    <li><a href="#" id="newuser-link" class="skel-layers-ignoreHref"><span class="icon fa-user">Cadastrar Usuário</span></a></li>
                 </ul>
             </nav>
         </div>
@@ -51,23 +48,19 @@
             </ul>
         </div>
     </div>
-    <div id="conteudo"></div>
     <!-- Footer -->
-    <div id="footer">
-        <!-- Copyright -->
+    <!-- <div id="footer">
+        Copyright
         <ul class="copyright">
             <li>&copy; All rights reserved.</li>
             <li>Done: <a href="#">Matheus S Hofart</a> e <a href="#">Gabriel Tagliari Rodrigo</a></li>
-        </ul>
-    </div>
+    </div> -->
+    <div id="conteudo"></div>
     <script>
 	    $(document).ready(function(){
 	    	$("#home-link").on("click",function(){$("#conteudo").load('home.html');});
 	    	$("#produtos-link").on("click",function(){$("#conteudo").load('produtos.html');});
-	    	$("#newproduto-link").on("click",function(){$("#conteudo").load('newproduto.html');});
 	    	$("#pedidos-link").on("click",function(){$("#conteudo").load('newpedido.html');});
-	    	$("#usuarios-link").on("click",function(){$("#conteudo").load('users.html');});
-	    	$("#newuser-link").on("click",function(){$("#conteudo").load('newuser.html');});
 	    });    
     </script>
 </body>
