--- a/WebContent/html5/admin/produtos.html
+++ b/WebContent/html5/admin/produtos.html
@@ -7,9 +7,9 @@
 		<h2>Lista de Produtos</h2>
 		<table id="example" class="display compact" cellspacing="0" width="100%"></table>
 		<div class="form-group">
-		<a href="#openModalCreate"><span id="add" class="icon fa-plus"></span></a>
-		<span id="edit" class="icon fa-pencil-square-o"></span>
-		<a href="#"><span id="remover" class="icon fa-trash-o"></span></a>
+		<a href="#openModalCreate"><span id="add" class="icon fa-plus" style="font-size: 1.5em;"></span></a>
+		<span id="edit" class="icon fa-pencil-square-o" style="font-size: 1.5em; padding:5px;"></span>
+		<a href="#"><span id="remover" class="icon fa-trash-o" style="font-size: 1.5em;"></span></a>
 		</div>
     </div>
     <div id="openModalCreate" class="modalDialog">
