--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -11,9 +11,9 @@
 		<table id="example" class="display" cellspacing="0" width="100%">
 		</table>
 		<div class="form-group">
-			<a href="#openModalCreate"><span class="icon fa-plus"></span></a> 
-			<span id="edit" class="icon fa-pencil-square-o"></span>
-			<a href="#"><span id="remover" class="icon fa-trash-o"></span></a>
+			<a href="#openModalCreate"><span class="icon fa-plus" style="font-size: 1.5em;"></span></a> 
+			<span id="edit" class="icon fa-pencil-square-o" style="font-size: 1.5em; padding:5px;"></span>
+			<a href="#"><span id="remover" class="icon fa-trash-o" style="font-size: 1.5em;"></span></a>
 		</div>
 	</div>
 	<div id="openModalCreate" class="modalDialog">
