--- a/WebContent/html5/admin/index.html
+++ b/WebContent/html5/admin/index.html
@@ -41,11 +41,9 @@
             </nav>
         </div>
         <div class="bottom">
-            <!-- Social Icons -->
-            <ul class="icons">
-                <li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+            <ul class="Copyright">
+                <li style="font-size: 18px; text-align: center;">Copyright &copy; All rights reserved.</li>
+                <li style="font-size: 14px; text-align: center;">Elisa Battlaglini | Gabriel Tagliari | Matheus Hofart</li>
             </ul>
         </div>
     </div>
