--- a/WebContent/html5/admin/users.html
+++ b/WebContent/html5/admin/users.html
@@ -123,7 +123,7 @@ $(document).ready(function(){
   									for (var int = 0; int < data.length; int++) {
   										$.ajax({
   										     type: "POST",
-  										     url: "http://localhost:8080/VirtualQueue/VQ/user/deleta",
+  										     url: "/VirtualQueue/VQ/user/deleta",
   										     data: data[int].email,
   										     contentType: "application/json; charset=utf-8",
   										     dataType: "json",
@@ -152,7 +152,7 @@ $(document).ready(function(){
 	  			}
 		    	$.ajax({
 					     type: "POST",
-					     url: "http://localhost:8080/VirtualQueue/VQ/user/update",
+					     url: "/VirtualQueue/VQ/user/update",
 					     data: JSON.stringify(data[0]),
 					     contentType: "application/json; charset=utf-8",
 					     dataType: "json",
@@ -179,7 +179,7 @@ $(document).ready(function(){
 		    		}
 		        		$.ajax({
 		    			     type: "POST",
-		    			     url: "http://localhost:8080/VirtualQueue/VQ/user/createform",
+		    			     url: "/VirtualQueue/VQ/user/createform",
 		    			     data: JSON.stringify(user),
 		    			     contentType: "application/json; charset=utf-8",
 		    			     dataType: "json",
