--- a/WebContent/html5/admin/index.html
+++ b/WebContent/html5/admin/index.html
@@ -42,8 +42,8 @@
         </div>
         <div class="bottom">
             <ul class="Copyright">
-                <li style="font-size: 18px; text-align: center;">Copyright &copy; All rights reserved.</li>
-                <li style="font-size: 14px; text-align: center;">Elisa Battlaglini | Gabriel Tagliari | Matheus Hofart</li>
+                <li style="font-size: 18px; text-align: center; color: rgba(255, 255, 255, 0.5);">Copyright &copy; All rights reserved.</li>
+                <li style="font-size: 14px; text-align: center; color: rgba(255, 255, 255, 0.5);">Elisa Battlaglini | Gabriel Tagliari | Matheus Hofart</li>
             </ul>
         </div>
     </div>
