--- a/WebContent/html5/users/index.html
+++ b/WebContent/html5/users/index.html
@@ -39,21 +39,12 @@
             </nav>
         </div>
         <div class="bottom">
-            <!-- Social Icons -->
-            <ul class="icons">
-                <li><a href="#" class="icon fa-linkedin"><span class="label">Linkedin</span></a></li>
-                <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+            <ul class="Copyright">
+                <li style="font-size: 18px; text-align: center; color: rgba(255, 255, 255, 0.5);">Copyright &copy; All rights reserved.</li>
+                <li style="font-size: 14px; text-align: center; color: rgba(255, 255, 255, 0.5);">Elisa Battlaglini | Gabriel Tagliari | Matheus Hofart</li>
             </ul>
         </div>
     </div>
-    <!-- Footer -->
-    <!-- <div id="footer">
-        Copyright
-        <ul class="copyright">
-            <li>&copy; All rights reserved.</li>
-            <li>Done: <a href="#">Matheus S Hofart</a> e <a href="#">Gabriel Tagliari Rodrigo</a></li>
-    </div> -->
     <div id="conteudo"></div>
     <script>
 	    $(document).ready(function(){
